# Retrieval-Augmented-Generation

./: .gitignore  README.md  pyproject.toml
cli/: augmented_generation_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  multimodel_search_cli.py  semantic_search_cli.py
cli/lib/: augmented_generation.py  evaluate.py  hybrid_search.py  keyword_search.py  llm.py  multimodal_search.py  search_utils.py  semantic_search.py  test_gemini.py
cli/lib/llm/: augmented_generation.py  evaluate.py  multi_model_search.py  re_rank.py  summary.py
cli/lib/prompt/: re_rank.py
