[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.67.0",
    "nltk==3.9.1",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
]
